date code eklendi

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
         <div>
             
             <p>
-                Copyright © Backroads Travel Tours Company <span id="date">2023</span> . All Rights Reserved
+                Copyright © Backroads Travel Tours Company <span id="date">2020</span> . All Rights Reserved
             </p>
         </div>
     </footer>
     
+
+    <script src="app.js"></script>
 </body>
 </html>
